--- a/styles/style.module.css
+++ b/styles/style.module.css
@@ -1,4 +1,6 @@
 /* General Section Styling */
+@import url('https://fonts.googleapis.com/css2?family=Ojuju:wght@200..800&display=swap');
+
 .section {
     display: flex;
     align-items: center;
@@ -36,6 +38,10 @@
     list-style: none;
     margin: 0;
     padding: 0;
+    font-family: "Ojuju", serif;
+    font-optical-sizing: auto;
+    text-transform: uppercase;
+    font-weight: 600;
   }
   
   .navLinks li {
@@ -47,6 +53,7 @@
     text-decoration: none;
     font-size: 18px;
     transition: color 0.3s ease;
+    padding-right: 80px;
   }
   
   .navLinks a:hover {
