--- a/styles/style.module.css
+++ b/styles/style.module.css
@@ -106,52 +106,6 @@
       justify-content: center;
        }
 
-.section4 {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        height: 120vh;
-        position: relative;
-        font-family: "Shadows Into Light", cursive;
-        font-weight: 400;
-        font-style: normal;
-        color: #ffeded;
-        text-transform: uppercase;
-        font-size: 8vmin;
-        padding-left: 10%;
-        padding-right: 10%;
-      }
-
-      .section4 h2 {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        height: 80vh;
-        position: relative;
-        font-family: "Shadows Into Light", cursive;
-        font-weight: 400;
-        font-style: normal;
-        color: #ffeded;
-        text-transform: uppercase;
-        font-size: 8vmin;
-        margin-right: 500px;
-      }
-
-      .section4 form {
-        border: 1px solid white;
-        padding:30px;
-        border-radius: 10px;
-      }
-
-      .section4 label {
-        font-size: 24px;
-    margin-right: 30px;
-    color: dodgerblue;
-      }
-
-      .section4 button {
-        background-color: dodgerblue;
-      }
 
       .section5 {
         display: flex;
@@ -250,9 +204,22 @@
     padding: 20px;
     margin: 10px;
     width: 300px; /* Adjust the width as needed */
-    box-shadow: 0 1px 20px dodgerblue;
     height: 450px;
     text-align: center;
+    transition: transform 0.3s ease-in-out;
+  }
+
+  .projectCard:hover {
+    border: 3px solid #ccc;
+    border-radius: 10px;
+    padding: 20px;
+    margin: 10px;
+    width: 300px; /* Adjust the width as needed */
+    box-shadow: 0 1px 20px dodgerblue;
+    width: 300px;
+    height: 450px;
+    text-align: center;
+    transform: scale(1.1);
   }
   
   .projectCard h5 {
@@ -289,27 +256,115 @@
     font-weight: 800;
   }
 
-  .input, .textarea {
-    width: 80%; /* Adjust width as needed */
-    padding: 10px;
-    border: 1px solid #ccc;
+
+.section4 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 120vh;
+  position: relative;
+  font-family: "Shadows Into Light", cursive;
+  font-weight: 400;
+  font-style: normal;
+  color: #ffeded;
+  text-transform: uppercase;
+  font-size: 8vmin;
+  padding-left: 10%;
+  padding-right: 10%;
+}
+
+.section4 h2 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 80vh;
+  width: 100%;
+  position: relative;
+  font-family: "Shadows Into Light", cursive;
+  font-weight: 400;
+  font-style: normal;
+  color: #ffeded;
+  text-transform: uppercase;
+  font-size: 8vmin;
+  margin-right: 500px;
+}
+
+.section4 form {
+  border: 2px solid white;
+  padding-left: 30px;
+  padding-right: 30px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  border-radius: 10px;
+  transition: transform 0.3s ease-in-out;
+  margin-right: 70px;
+}
+
+.section4 form-group {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.section4 form:hover {
+  border: 1px solid white;
+  padding-left: 30px;
+  padding-right: 30px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  border-radius: 10px;
+  transform: scale(1.1);
+  box-shadow: 0 2px 5px dodgerblue;
+}
+
+.section4 label {
+  font-size: 24px;
+margin-right: 30px;
+color: dodgerblue;
+}
+
+.section4 button {
+  background-color: dodgerblue;
+  border: 4px solid white;
+  width: 100%;
+  padding: 20px;
+  margin-top: -4px;
+  margin-bottom: 20px;
+  color: white;
+  font-size: 30px;
+}
+
+  .section4 input {
+    background: transparent;
+
     border-radius: 5px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Add a subtle box shadow */
+    box-shadow: 0 2px 5px dodgerblue;
+    height: 40px;
+    width: 300px;
+    border: 4px solid dodgerblue;
+    color: dodgerblue;
+    font-weight: 600;
+    padding-left: 10px;
   }
-  
-  .textarea {
-    resize: vertical;
-  }
-  
-  .section4 .send-btn {
-    background-color: #007bff;
-    color: #fff;
-    border: none;
-    padding: 10px 20px;
+
+  .section4 textarea {
+    background: transparent;
+    height: 200px;
+    width: 500px;
     border-radius: 5px;
-    cursor: pointer;
-    font-weight: bold; /* Make the button text bold */
+    box-shadow: 0 2px 5px dodgerblue;
+    border: 4px solid dodgerblue;
+    font-weight: 600;
+    padding-left: 10px;
+    padding-top: 10px;
+    color: dodgerblue;
   }
+
+    
+    .section4 .send-btn {
+      background-color: #007bff;
+      color: #fff;
+      border: 5px solid white;/* Make the button text bold */
+    }
 
   /* Responsive Styling */
   @media (max-width: 768px) {
