--- a/styles/style.module.css
+++ b/styles/style.module.css
@@ -397,7 +397,7 @@ color: dodgerblue;
   /* Responsive Styling */
   @media (max-width: 768px) {
     .section {
-      font-size: 5vmin;
+      font-size: 1vmin;
     }
   
     .hero h1 {
@@ -417,16 +417,35 @@ color: dodgerblue;
 
 /* Tablets (768px and below) */
 @media (max-width: 768px) {
-  .section, .section2, .section3, .section4, .section5 {
+  .section {
+
     font-size: 2vmin;
+    padding-top: 100px;
     padding-left: 5%;
     padding-right: 5%;
-    height: 100%;
+    height: 80%;
+  }
+
+  .section2, .section3 {
+    font-size: 2vmin;
+    padding-top: 100px;
+    padding-left: 5%;
+    padding-right: 5%;
+    height: 65%;
+  }
+
+  .section4 {
+    font-size: 2vmin;
+    padding-top: 100px;
+    padding-left: 5%;
+    padding-right: 5%;
+    height: 50%;
   }
 
   .section h1, .section h2, .section h3 {
     margin-right: 100px;
     font-size: 36px;
+    width: 75%;
   }
 
   .section3 .projectCard h5, .section3 .projectCard p, .section3 .projectCard a {
@@ -463,6 +482,7 @@ color: dodgerblue;
 /* Mobile devices (480px and below) */
 @media (max-width: 480px) {
   .section, .section2, .section3, .section4, .section5 {
+    padding-top: 200px;
     font-size: 4vmin;
     flex-direction: column;
     text-align: center;
